--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
               </ul>
           </a>
           <div class="search">
-              <div class="search-left"></div>
+              <div class="search-left">
+                  <input type="text" class="user">
+              </div>
               <div class="search-right">
                   <i class="iconfont icon-sousuo"></i>
               </div>
@@ -249,6 +251,8 @@
       <div class="content">
           <div class="content-box">
               <div class="on-small">
+                  <div class="on-small-word">小米电视给我惊喜，昨天下午下单，第二天上午就送到啦...</div>
+                  <div class="on-small-comment">来自于 陈金壮 的评价</div>
               </div>
               <div class="on">
                   <div class="word">减200元</div>
@@ -266,7 +270,10 @@
               </a>
           </div>
           <div class="content-box">
-              <div class="on-small"></div>
+              <div class="on-small">
+                  <div class="on-small-word">之前买个49的，又买台50的，不错不错，我是老米...</div>
+                  <div class="on-small-comment">来自于 大海 的评价</div>
+              </div>
               <div class="on">
                   <div class="word">减200元</div>
               </div>
@@ -283,8 +290,11 @@
               </a>
           </div>
           <div class="content-box">
-              <div class="on-small"></div>
-              <div class="exposure"><img src="img/miA.png" alt=""></div>
+              <div class="on-small">
+                  <div class="on-small-word">是不是非常有型</div>
+                  <div class="on-small-from">来自于1135023025 的评价</div>
+              </div>
+              <div class="exposure exposure-t"><img src="img/miA.png" alt=""></div>
               <a href="" class="title">
                   <ul>
                       <li>13.3"小米笔记本Air i5 8G 256G</li>
@@ -294,8 +304,11 @@
                   </ul>
           </div>
           <div class="content-box">
-              <div class="on-small"></div>
-              <div class="exposure"><img src="img/miP.png" alt=""></div>
+              <div class="on-small">
+                  <div class="on-small-word">刚到手那一刻惊艳到了，完美！外观99分，怕你骄傲。...</div>
+                  <div class="on-small-from small-from">来自于1135023025 的评价</div>
+              </div>
+              <div class="exposure exposure-t"><img src="img/miP.png" alt=""></div>
               <a href="" class="title">
                   <ul>
                       <li>15.6"小米笔记本Air i7 16G</li>
@@ -305,21 +318,30 @@
                   </ul>
           </div>
           <div class="content-box content-boxtop">
-              <div class="on-small"></div>
+              <div class="on-small">
+                  <div class="on-small-word">外观很漂亮，有个显示屏，好高大上，睡眠模式非常安静！</div>
+                  <div class="on-small-comment">来自于 嘉仁宫 的评价</div>
+              </div>
               <div class="exposure"><img src="img/clear.png" alt="" ></div>
                         <li>米家空气净化器</li>
                         <li>OLED显示屏幕/激光颗粒物传感器</li>
                             <div class="num">1499元</div>
           </div>
           <div class="content-box content-boxtop">
-              <div class="on-small"></div>
+              <div class="on-small">
+                  <div class="on-small-word">好不好用我就不说，反正颜值就是正义，其他的管它呢（*...</div>
+                  <div class="on-small-comment">来自于 神龙 的评价</div>
+              </div>
               <div class="exposure"><img src="img/kettle.png" alt="" ></div>
                         <li>米家空气净化器</li>
                         <li>OLED显示屏幕/激光颗粒物传感器</li>
                             <div class="num">99元</div>
           </div>
           <div class="content-box content-boxtop">
-              <div class="on-small"></div>
+              <div class="on-small">
+                  <div class="on-small-word">真心不错，妹子还有什么灯出来！</div>
+                  <div class="on-small-comment">来自于 ken 的评价</div>
+              </div>
               <div class="exposure"><img src="img/led.png" alt="" ></div>
                         <li>米家LED吸顶灯</li>
                         <li>用光线，还原理想生活</li>
@@ -460,7 +482,7 @@
           </div>
       <!--为你推荐结束-->
       <!--热评产品开始-->
-      <div class="hot">
+      <div class="hot"   >
               <div class="hot-top">
                   <div class="recommend">
                       <h2 class="look">热评产品</h2>
@@ -468,7 +490,7 @@
                <div class="show">
                    <a class="show-first">
                        <div class="print"><img src="img/chaban.png" alt=""></div>
-                       <p class="produce">东西真心不错，用过最好用的插线板，做工外观没的挑剔，3个USB接口很实用，充电快，建议不包邮的应该在</p>
+                       <p class="produce">东西真心不错，用过最好用的插线板，做工外观没的挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</p>
                        <div class="observer">来自于yinyin1989的评论</div>
                        <div class="space">
                            <div class="space-name">小米插线板</div>
@@ -477,7 +499,7 @@
                    </a>
                    <a class="show-first">
                        <div class="print"><img src="img/watch.png" alt=""></div>
-                       <p class="produce">东西真心不错，用过最好用的插线板，做工外观没的挑剔，3个USB接口很实用，充电快，建议不包邮的应该在</>
+                       <p class="produce">东西真心不错，用过最好用的插线板，做工外观没的挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</p>
                        <div class="observer">来自于yinyin1989的评论</div>
                        <div class="space">
                            <div class="space-name">免打定位电话</div>
@@ -519,7 +541,7 @@
                       <div class="bill">4.2米币</div>
                       <div class="photo"><img src="img/bao.png" alt=""></div>
                       <div class="round">
-                          <div class="round-one"></div>
+                          <div class="round-one round-one-n"></div>
                           <div class="round-one round-one-a"></div>
                           <div class="round-one round-one-a"></div>
                   <div class="click-l"></div>
