--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
       <!--导航结束-->
       <!--banner开始-->
       <div class="banner">
-          <!--<div class="pic"></div>-->
           <a href="" class="picture" style="z-index:10"><img src="img/mi8.jpg" alt=""></a>
           <a href="" class="picture"><img src="img/mi6.jpg" alt=""></a>
           <a href="" class="picture"><img src="img/TV.jpg" alt=""></a>
@@ -1238,7 +1237,7 @@
       <!--通道结束-->
       <!--闪购开始-->
       <div class="home">
-         <div class="rice">
+          <div class="rice">
              <h1>小米闪购</h1>
              <div class="arrows">
                  <div class="arrows1"><</div>
@@ -1886,32 +1885,32 @@
               <div class="mobile">
                   <div class="voerall">
                       <a href="" class="figure"><img src="img/mi6A.png" alt=""></a>
-                      <div class="onclick">红米6A</div>
+                      <div class="click">红米6A</div>
                       <div class="desc">AI人脸解锁，小巧全面屏，高性能处</div>
                       <div class="cost">599元</div>
                   </div>
                   <div class="voerall">
                       <a href="" class="figure"><img src="img/xiaomi8.png" alt=""></a>
-                      <div class="onclick">小米8 6GB+64GB</div>
+                      <div class="click">小米8 6GB+64GB</div>
                       <div class="desc">全球首款双屏GPS，骁龙845处理器</div>
                       <div class="cost">2699元</div>
                   </div>
                   <div class="voerall">
                       <a href="" class="figure"><img src="img/mi8SE.png" alt=""></a>
-                      <div class="onclick">小米8 SE 4GB+64GB</div>
+                      <div class="click">小米8 SE 4GB+64GB</div>
                       <div class="desc">AI超感双摄，三星AMOLED屏幕</div>
                       <div class="cost">1799元</div>
                   </div>
                   <div class="voerall">
                       <a href="" class="figure"><img src="img/mixbai.png" alt=""></a>
-                      <div class="onclick">小米MIX 2S 8GB+256GB</div>
+                      <div class="click">小米MIX 2S 8GB+256GB</div>
                       <div class="desc">骁龙845年度旗舰处理器，艺术品般</div>
                       <div class="cost">3999元</div>
                   </div>
                   <div class="voerall too">
                       <div class="discount">减200元</div>
                       <a href="" class="figure"><img src="img/mi6X.png" alt=""></a>
-                      <div class="onclick">小米6X 4GB+32GB</div>
+                      <div class="click">小米6X 4GB+32GB</div>
                       <div class="desc">全索尼相机，骁龙660 AIE处理器</div>
                       <div class="pricefall">
                           <div class="originalcost">1499元</div>
@@ -1921,7 +1920,7 @@
                   <div class="voerall too">
                       <div class="discount">享8折</div>
                       <a href="" class="figure"><img src="img/max2.png" alt=""></a>
-                      <div class="onclick">小米Max 2 4GB+64GB</div>
+                      <div class="click">小米Max 2 4GB+64GB</div>
                       <div class="desc">6.44"大屏，5300mA充电宝级的大</div>
                       <div class="originalcost">1199元</div>
                       <div class="presentcost">1699元</div>
@@ -1929,7 +1928,7 @@
                   <div class="voerall too">
                       <div class="discount">享7折</div>
                       <a href="" class="figure"><img src="img/mixhei.png" alt=""></a>
-                      <div class="onclick">小米MIX 2 全陶瓷尊享版</div>
+                      <div class="click">小米MIX 2 全陶瓷尊享版</div>
                       <div class="desc">全面屏2.0 Unibody全陶瓷</div>
                       <div class="originalcost">2999元</div>
                       <div class="presentcost">4699元</div>
@@ -1937,7 +1936,7 @@
                   <div class="voerall too">
                       <div class="discount">减100元</div>
                       <a href="" class="figure"><img src="img/miS2.png" alt=""></a>
-                      <div class="onclick">红米S2 3GB+32GB</div>
+                      <div class="click">红米S2 3GB+32GB</div>
                       <div class="desc">前置1600万超大像素智能美拍</div>
                       <div class="originalcost">899元</div>
                       <div class="presentcost">999元</div>
@@ -2043,9 +2042,9 @@
               </div>
               <div class="content_bottom">
                   <ul>
-                      <li class="readBox">
+                      <li class="game">
                           <div class="content1">图书</div>
-                          <a href="javascript:;">
+                          <a href="">
                               <div class="read" style="left: 0;">
                                   <p class="content2">哈利·波特与被诅咒的孩子</p>
                                   <p class="content3">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！</p>
@@ -2072,9 +2071,9 @@
                           <div class="move_left"><i class="iconfont icon-right"></i></div>
                           <div class="move_right"><a href="javascript:;"><i class="iconfont icon-icon"></i></a></div>
                       </li>
-                      <li class="readBox1">
-                          <div class="content1 ex1">MIUI 主题</div>
-                          <a href="javascript:;">
+                      <li class="game1">
+                          <div class="content1 color1">MIUI 主题</div>
+                          <a href="" class="">
                               <div class="read" style="left: 0;">
                                   <p class="content2">包宝宝养成记</p>
                                   <p class="content3">包宝宝定制主题Q萌上线！快来领取萌萌包宝宝吧！</p>
@@ -2109,9 +2108,9 @@
                           <div class="move_left"><i class="iconfont icon-right"></i></div>
                           <div class="move_right"><a href="javascript:;"><i class="iconfont icon-icon"></i></a></div>
                       </li>
-                      <li class="readBox2">
-                          <div class="content1 ex2">游戏</div>
-                          <a href="javascript:;">
+                      <li class="game2">
+                          <div class="content1 color2">游戏</div>
+                          <a href="" class="">
                               <div class="read" style="left: 0;">
                                   <p class="content2">非人学园</p>
                                   <p class="content3">脑洞大开的二次元竞技手游</p>
@@ -2145,9 +2144,9 @@
                           <div class="move_left"><i class="iconfont icon-right"></i></div>
                           <div class="move_right"><a href="javascript:;"><i class="iconfont icon-icon"></i></a></div>
                       </li>
-                      <li class="readBox3">
-                          <div class="content1 ex3">应用</div>
-                          <a href="javascript:;">
+                      <li class="game3">
+                          <div class="content1 color3">应用</div>
+                          <a href="" class="">
                               <div class="read" style="left: 0;">
                                   <p class="content2">2017金米奖</p>
                                   <p class="content3">最优秀的应用和游戏</p>
