--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>小米商城</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcar icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_774013_z4r8f89rvvd.css">
     <!--<link rel="stylesheet" href="css/index.css">-->
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_774013_klbtbxb94q.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_773952_rmznfo6y6es.css">
     <script src="js/animate.js"></script>
+    <script src="js/jQuery.js"></script>
 </head>
 <body>
       <!--头部开始-->
@@ -50,7 +50,7 @@
               <a href="" class="logo-mi">
                   <img src="img/logo.png" alt="">
               </a>
-              <a href="" class="nav">
+              <a href="#;;" class="nav">
                   <ul>
                       <li>小米手机
                           <div class="down-box">
@@ -503,6 +503,48 @@
                   </div>
                   <div class="search-right">
                       <i class="iconfont icon-sousuo"></i>
+                  </div>
+                  <div class="pull">
+                      <div class="history">
+                          <div class="names">小米6X</div>
+                          <div class="count">约有6件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">小米MIX 2s</div>
+                          <div class="count">约有5件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">黑鲨游戏手机</div>
+                          <div class="count">约有3件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">红米note 5</div>
+                          <div class="count">约有6件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">红米5A</div>
+                          <div class="count">约有13件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">小米电视4C</div>
+                          <div class="count">约有5件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">电视32英寸</div>
+                          <div class="count">约有3件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">笔记本pro</div>
+                          <div class="count">约有5件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">空气净化器</div>
+                          <div class="count">约有11件</div>
+                      </div>
+                      <div class="history">
+                          <div class="names">净水器</div>
+                          <div class="count">约有8件</div>
+                      </div>
                   </div>
               </div>
           </div>
