--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
               </div>
               <div class="brick">
                   <div class="brick-m"><img src="img/desk.png" alt=""></div>
-                  <div class="brick-m brick-n"><img src="img/floor.png" alt=""></div>
+                  <div class="brick-m"><img src="img/floor.png" alt=""></div>
               </div>
               <div class="content" style="z-index: 5">
                   <div class="content-box">
